fix: generatedIndexPage had wrong width since we enlarge the main container

--- a/src/css/menu.scss
+++ b/src/css/menu.scss
@@ -28,6 +28,12 @@
     display: none !important;
   }
 
+  .container {
+    & > div[class*='generatedIndexPage_'] {
+      max-width: 100% !important;
+    }
+  }
+
   @media (min-width: 1440px) {
     .container {
       // Since disabling table of contents of all pages
